@@ -2,6 +2,7 @@
 
 * Add mglData::Pulse() for determining pulse parameters
 * Add MGL command 'echo' for printing the content of data
+* Add MGL command 'print' -- like 'info' but print immediately in stdout
 * Add Pmap() plot for Poincare map
 * Add Lamerey() plot for Lamerey diagram
 * Add Bifurcation() plot for Bifurcation diagram
